--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Ability:</b>
+  <b>Experience/Ability:</b>
   <%= @experience.ability %>
 </p>
 
 <p>
-  <b>Lengthinyears:</b>
-  <%= @experience.lengthInYears %>
+  <b>Years of Experience:</b>
+  <%= @experience.length_in_years %>
 </p>
 
 <p>
-  <b>Comfortlevel:</b>
-  <%= @experience.comfortLevel %>
+  <b>Comfort Level:</b>
+  <%= @experience.comfort_level %>
 </p>
 
 
