--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   <% end %>
   <li><a href="/users/logout">Logout</a></li>
   <% end %>
-<li>Usertype: <%= session[:usertype] %>. User_id: <%= session[:id] %></li>
+<li>Usertype: <%= session[:usertype] %>. User ID: <%= session[:id] %></li>
 </ul>
 
 
