--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-  <b>Total years experience:</b>
+  <b>Total years of experience:</b>
   <%= @mentee.total_years_experience %>
 </p>
 
@@ -43,8 +43,8 @@
 -->
 
 <p>
-   <b>Experiences</b>
-   <%= @mentee.experiences %>
+  <b>Experiences</b>
+  <%= @mentee.experiences %>
 </p>
 
 <p>
