--- a/app/views/mentors/_form.html.erb
+++ b/app/views/mentors/_form.html.erb
@@ -52,8 +52,8 @@
     <%= f.text_area :interests %>
   </div>
   <div class = "links">
-      <%= link_to 'Experiences', experiences_path %>
-  <div>
+    <%= link_to 'Experiences', experiences_path %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
