--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -26,7 +26,7 @@
 </p>
 
 <p>
-  <b>Total years experience:</b>
+  <b>Total years of experience:</b>
   <%= @mentor.total_years_experience %>
 </p>
 
@@ -44,7 +44,7 @@
 
 <p>
    <b>Experiences</b>
-   <%= @mentee.experiences %>
+   <%= @mentor.experiences %>
 </p>
 
 <p>
