Modified the welcome email and inserted accepted and rejected emails, as per Nathan's instructions. There are no separate Accept and Reject methods yet.

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
 	<th>From</th>
     <th>Reason</th>
-    <th>Estimatedlength</th>
+    <th>Estimated Length</th>
     <th></th>
     <th></th>
   </tr>
