--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -6,10 +6,9 @@
 </p>
 
 <p>
-  <b>Estimatedlength:</b>
+  <b>Estimated Length:</b>
   <%= @request.estimatedLength %>
 </p>
-
 
 <%= link_to 'Edit', edit_request_path(@request) %> |
 <%= link_to 'Back', requests_path %>
