--- a/app/views/availability_calendars/show.html.erb
+++ b/app/views/availability_calendars/show.html.erb
@@ -3,7 +3,7 @@
 <p>
   
   <% @availability_calendar.availability_days.each do |day| %>
-	<%= day.availability_day %>: <%=day.availability %>
+	<%= day.availability_day %>: <%=day.availability %><br />
   <% end %>
 </p>
 
