--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -51,6 +51,10 @@
     <%= f.label :interests %><br />
     <%= f.text_area :interests %>
   </div>
+  <div class="field">
+	<%= f.label :experiences %><br />
+	<%= f.text_area :user.experiences %>
+  </div> 
   <div class="actions">
     <%= f.submit %>
   </div>
