--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :length_in_years %>
   </div>
   <div class="field">
-    <%= f.label :comfort_level %><br />
+    <%= f.label :comfort_level %> (out of 10)<br />
     <%= f.text_field :comfort_level %>
   </div>
   <div class="actions">
