Moved edit and destroy from mentor/mentee lists to individual profiles.

--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -24,11 +24,11 @@
     <td><%= mentee.total_years_experience %></td>
     <td><%= mentee.interests %></td>
     <td><%= link_to 'Show', mentee %></td>
-    <td><%= link_to 'Edit', edit_mentee_path(mentee) %></td>
-    <td><%= link_to 'Destroy', mentee, :confirm => 'Are you sure?', :method => :delete %></td>
+    <!-- <td><%= link_to 'Edit', edit_mentee_path(mentee) %></td> -->
+    <!-- <td><%= link_to 'Destroy', mentee, :confirm => 'Are you sure?', :method => :delete %></td> -->
   </tr>
 <% end %>
 </table>
 <br />
 
-<%= link_to 'New Mentee', new_mentee_path %>
+<!-- <%= link_to 'New Mentee', new_mentee_path %> -->
