--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -24,11 +24,11 @@
     <td><%= mentor.total_years_experience %></td>
     <td><%= mentor.interests %></td>
     <td><%= link_to 'Show', mentor %></td>
-    <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td>
-    <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td>
+    <!-- <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td> -->
+    <!-- <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td> -->
   </tr>
-<% end %>
+  <% end %>
 </table>
 <br />
 
-<%= link_to 'New Mentor', new_mentor_path %>
+<!-- <%= link_to 'New Mentor', new_mentor_path %> -->
