--- a/app/views/notifier/mentorship_request_email.text.erb
+++ b/app/views/notifier/mentorship_request_email.text.erb
@@ -2,6 +2,9 @@ New mentorship request from <%= @request.mentee.name %>
  
 Hello, <%= @request.mentor.name %>. You have a new mentorship request from <%= @request.mentee.name %>.
 
+Reason: <%= @request.reason %>.
+Estimated mentorship length: <%= @request.estimated_length %>
+
 To view <%= @request.mentee.name %>'s profile, click this link: <%= @url %>mentees/<%= @request.mentee.id %>.
  
 To view and respond to your requests, click this link: <%= @url %>requests.
