--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,10 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>ThoughtWorks Village | www.thoughtworks.com</title>
+    <link rel="icon" href="images/corporate_favicon.ico" type="image/ico" />
     <%= javascript_include_tag :defaults %>
     <%= stylesheet_link_tag "main" %>
 </head>
-<link rel="icon" href="images/corporate_favicon.ico" type="image/ico" />
 <body>
 <div id="MainBody">
 <div class="navbar">
@@ -18,7 +18,7 @@
 <li><a href="/mentees">Browse Mentees</a></li>
 
 <% if ! session[:usertype] %>
-<li><a href="/mentors/new">Register</a></li>
+<li><a href="/mentees/new">Register</a></li>
 <li><a href="/users/login">Login</a></li>
 <% else %>
   <% if session[:usertype] == :mentor %>
