--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <link rel="icon" href="images/corporate_favicon.ico" type="image/ico" />
     <%= javascript_include_tag :defaults %>
     <%= stylesheet_link_tag "main" %>
+	<%= csrf_meta_tag %>
 </head>
 <body>
 <div id="MainBody">
