--- a/app/views/availability_calendars/_form.html.erb
+++ b/app/views/availability_calendars/_form.html.erb
@@ -1,74 +1,77 @@
-<%= javascript_include_tag "jquery-ui.js" %>
-<%= stylesheet_link_tag("jquery-ui.css") %>
+<%= javascript_include_tag "jquery.datePicker.js" %>
+<%= javascript_include_tag "date.js" %>
+<%= stylesheet_link_tag("datePicker.css") %>
 <script>
-/*jQuery(function($) {
-  // when the #search field changes
-  $("#search").change(function() {
-    // make a POST call and replace the content
-    $.post("<%= url_for(:action => 'update_day', :controller => 'availability_calendars') %>",
-	{ q: $("#search").val() },//adds newline somehow?
-	function(data) {
-      $("#results").html(data);
-    });
-  });
-})*/
 
-$(function() {
-	$( "#datepicker" ).datepicker({
-	   beforeShowDay: calBeforeShowDay, 
-		onSelect: calOnSelect
-	});
+$(function()
+{
+	$('#datepicker')
+		.datePicker(
+			{	inline:true,
+				selectMultiple:true,
+				renderCallback:function($td, thisDate, month, year)
+				{
+					dstr=thisDate.toDateString();
+					if (dstr==new Date(2011,3-1,20).toDateString()) {
+						$td.addClass('red');
+					}
+				}
+			}
+		)
+		/*.bind('click',
+			function()
+			{
+				$(this).dpDisplay();
+				this.blur();
+				return false;
+			}
+		)*/
+		.bind('dateSelected',cycleDay
+		);
 });
+function cycleDay(e, selectedDate, $td) {
+	if ($td.hasClass('green')) {
+		$td.removeClass('green');
+		newClass='yellow';
+	} else if ($td.hasClass('yellow')) {
+		$td.removeClass('yellow');
+		newClass='red';
+	} else if ($td.hasClass('red')) {
+		$td.removeClass('red');
+		newClass='green';
+	} else {
+		newClass='green';
+	}
+	$td.addClass(newClass);
+	updateDayServer(selectedDate,newClass);
+}
 
-
-function calOnSelect (dateText, inst) { 
-			alert(dateText);
-alert($(this).html());
-			//updateDayServer(dateText,newClass);
-			
-		}
-function calBeforeShowDay (date) { 
-			//[0] equal to true/false indicating whether or not this date is selectable, [1] equal to a CSS class name(s) or '' for the default presentation, and [2] an optional popup tooltip for this date.
-			ar=new Array();
-			ar[0]=true;
-			ar[1]='availGray';
-//alert(aday.toDateString());
-//alert(date);
-			if (date.toDateString()==new Date(2011,3-1,20).toDateString()) {
-				ar[1]='red';
-			} else
-			if (date.toDateString()==new Date(2011,3-1,22).toDateString()) {
-				ar[1]='yellow';
-			} else
-			if (date.toDateString()==new Date(2011,3-1,24).toDateString()) {
-				ar[1]='green';
-			} else
-
-{}
-			return ar;
-		}
-function updateDayServer(dateText,colorText) {
+function updateDayServer(selectedDate,colorText) {
+	dateString=selectedDate.asString("mm/dd/yyyy");
+	//alert("set "+dateString+" " + colorText);
 	$.post("<%= url_for(:action => 'update_day', :controller => 'availability_calendars') %>",
-	{ date: dateText,
-	  color: "green" },//adds newline somehow?
+	{ date: dateString,
+	  color: colorText },//adds newline somehow?
 	function(data) {
 	  	$("#results").html(data);
 	});
 }
 </script>
 <style>
-.red a{
+.red {
 background-color: red !important;
 background-image:none !important;
+color:black !important;
 }
-.yellow a {
+.yellow {
 background-color: yellow !important;
 background-image:none !important;
-color: black;
+color:black !important;
 }
-.green a { 
+.green { 
 background-color: green !important;
 background-image:none !important;
+color:black !important;
 }
 .availGray availWeek { 
 background-color: gray;
@@ -78,8 +81,6 @@ Use the calendar below. Red=unavailable, Yellow=somewhat available, Green=availa
 
 <div id="datepicker"></div>
 <div id="results"></div>
-<input type="text" id="search" />
-<%= button_to('Update Thingy', {:action => 'search', :controller => 'mentors', :q => "J"}, :method => :post, :remote => true) %>
 
 
 <%= form_for(@availability_calendar) do |f| %>
