Changes from my last commit: security and Requests refactoring.

--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -24,7 +24,7 @@
   </div>
   <br/>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Login" %>
   </div>
   <br/>
   <a href="/mentees/new">Don't have an account? Register here!</a>
