--- a/app/views/mentees/show.html.erb
+++ b/app/views/mentees/show.html.erb
@@ -57,6 +57,8 @@
   <%= @mentee.interests %>
 </p>
 
+<% if session[:id].to_s == @mentee.id.to_s %>
 <%= link_to 'Edit Profile', edit_mentee_path(@mentee) %> |
 <%= link_to 'Delete Account', @mentee, :confirm => 'Are you sure?', :method => :delete %> |
+<% end %>
 <%= link_to 'Back', mentees_path %>
