--- a/app/views/mentors/show.html.erb
+++ b/app/views/mentors/show.html.erb
@@ -149,6 +149,8 @@ background-color: gray;
   </div>
 <% end %>
 <% end %>
+<% if session[:id].to_s == @mentor.id.to_s %>
 <%= link_to 'Edit Profile', edit_mentor_path(@mentor) %> |
 <%= link_to 'Delete Account', @mentor, :confirm => 'Are you sure?', :method => :delete %> |
+<% end %>
 <%= link_to 'Back', mentors_path %>
