--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>ThoughtWorks Village | www.thoughtworks.com</title>
-    <link rel="icon" href="images/corporate_favicon.ico" type="image/ico" />
+    <link rel="icon" href="/images/corporate_favicon.ico" type="image/ico" />
+    <link rel="shortcut icon" href="/images/corporate_favicon.ico" type="image/ico" />
     <%= javascript_include_tag :defaults %>
     <%= stylesheet_link_tag "main" %>
 	<%= csrf_meta_tag %>
@@ -19,7 +20,7 @@
 <li><a href="/mentees">Browse Mentees</a></li>
 
 <% if ! session[:usertype] %>
-<li><a href="/mentees/new">Register</a></li>
+<li><a href="/users/register">Sign Up</a></li>
 <li><a href="/users/login">Login</a></li>
 <% else %>
   <% if session[:usertype] == :mentor %>
