--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -27,8 +27,7 @@
     <%= f.submit "Login" %>
   </div>
   <br/>
-  <a href="/mentees/new">Don't have an account? Register here!</a>
+  <a href="/users/register">Don't have an account? Join us here!</a>
   <br/>
   <br/>
-  <a href="/mentors/new">ThoughtWorkers: Register using this link.</a>
 <% end %>
