--- a/app/views/mentors/search.html.erb
+++ b/app/views/mentors/search.html.erb
@@ -12,7 +12,7 @@ color: white;
 }
 </style>
 <table>
-<tr>Your Query was: <%=@query%></tr>
+<tr>You searched for: <%= @query %></tr>
 
 <tr>
   <th>First Name </th>
