--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,8 @@
     <th>Name</th>
     <th>Location</th>
     <th>Current Position</th>
-    <th>School</th>
-    <th>Major</th>
+    <!--<th>School</th>
+    <th>Major</th>-->
     <th>Total Years of Experience</th>
     <th>Email</th>
     <!--<th>Password</th>-->
@@ -25,8 +25,8 @@
     <td><%= user.name %></td>
     <td><%= user.location %></td>
     <td><%= user.current_position %></td>
-    <td><%= user.school %></td>
-    <td><%= user.major %></td>
+    <!--<td><%= user.school %></td>
+    <td><%= user.major %></td>-->
     <td><%= user.total_years_experience %></td>
     <td><%= user.email %></td>
     <!--<td><%= user.password %></td>-->
@@ -34,8 +34,8 @@
     <td><%= user.interests %></td>
     <td><%= user.type %></td>
     <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
+    <!--<td><%= link_to 'Edit', edit_user_path(user) %></td>-->
+    <!--<td><%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>-->
   </tr>
 <% end %>
 </table>
