--- a/app/views/mentors/index.html.erb
+++ b/app/views/mentors/index.html.erb
@@ -39,8 +39,6 @@ Location was: <%= @locations %>
     <th>First Name</th>
     <th>Location</th>
     <th>Current Position</th>
-    <th>School</th>
-    <th>Major</th>
     <th>Total Years of Experience</th>
     <th>Interests</th>
     <th></th>
@@ -53,11 +51,9 @@ Location was: <%= @locations %>
     <td><%= mentor.name.split[0] %></td>
     <td><%= mentor.location %></td>
     <td><%= mentor.current_position %></td>
-    <td><%= mentor.school %></td>
-    <td><%= mentor.major %></td>
     <td><%= mentor.total_years_experience %></td>
     <td><%= mentor.interests %></td>
-    <td><%= link_to 'Show', mentor %></td>
+    <td><%= link_to 'View Profile', mentor %></td>
     <!-- <td><%= link_to 'Edit', edit_mentor_path(mentor) %></td> -->
     <!-- <td><%= link_to 'Destroy', mentor, :confirm => 'Are you sure?', :method => :delete %></td> -->
   </tr>
