--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,14 +23,14 @@
     <%= f.label :current_position %><br />
     <%= f.text_field :current_position %>
   </div>
-  <div class="field">
+  <!--<div class="field">
     <%= f.label :school %><br />
     <%= f.text_field :school %>
   </div>
   <div class="field">
     <%= f.label :major %><br />
     <%= f.text_field :major %>
-  </div>
+  </div>-->
   <div class="field">
     <%= f.label :total_years_experience %><br />
     <%= f.text_field :total_years_experience %>
@@ -39,10 +39,10 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-  <div class="field">
+  <!--<div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
-  </div>
+  </div>-->
   <div class="field">
     <%= f.label :phone %><br />
     <%= f.text_field :phone %>
@@ -52,8 +52,8 @@
     <%= f.text_area :interests %>
   </div>
   <div class="field">
-	<%= f.label :experiences %><br />
-	<%= f.text_area :user.experiences %>
+    <%= f.label :experiences %><br />
+    <%= f.text_area :user.experiences %>
   </div> 
   <div class="actions">
     <%= f.submit %>
