--- a/app/views/mentees/edit.html.erb
+++ b/app/views/mentees/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @mentee %> |
-<%= link_to 'Back', mentees_path %>
+<!-- <%= link_to 'Show', @mentee %> |
+<%= link_to 'Back', mentees_path %> -->
