--- a/app/views/mentors/edit.html.erb
+++ b/app/views/mentors/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @mentor %> |
-<%= link_to 'Back', mentors_path %>
+<!-- <%= link_to 'Show', @mentor %> |
+<%= link_to 'Back', mentors_path %> -->
