Some progress toward Skills. Experiences is being converted into Skills, and the forms have been changed.

--- a/app/views/experiences/edit.html.erb
+++ b/app/views/experiences/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing experience</h1>
+<h1>Edit your skill set</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @experience %> |
+<!-- <%= link_to 'Show', @experience %> | -->
 <%= link_to 'Back', experiences_path %>
