--- a/app/views/experiences/show.html.erb
+++ b/app/views/experiences/show.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Experience/Ability:</b>
+  <b>Skill:</b>
   <%= @experience.ability %>
 </p>
 
 <p>
-  <b>Years of Experience:</b>
+  <b>Years of experience:</b>
   <%= @experience.length_in_years %>
 </p>
 
 <p>
-  <b>Comfort Level:</b>
+  <b>Level of experience:</b>
   <%= @experience.comfort_level %>
 </p>
 
