--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -10,20 +10,38 @@
       </ul>
     </div>
   <% end %>
+  
+  <table cellspacing=5>
+    <tr>
+      <td align="left" valign="top">
+	<%= f.label :ability, "Skill" %>
+      </td>
+      <td align="left">
+	<%= select "experience", "ability", Experience::ABILITIES.sort %>
+      </td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">
+	<%= f.label :length_in_years, "Years of experience" %>
+      </td>
+      <td align="left">
+	<%= select "experience", "length_in_years", (1..100) %> years
+      </td>
+    </tr>
+    <tr>
+      <td align="left" valign="top">
+	<%= f.label :comfort_level, "Level of experience" %>
+      </td>
+      <td align="left">
+	<%= select "experience", "comfort_level", (1..10) %><br/>
+	1 is completely unfamiliar, 10 is completely familiar
+      </td>
+    </tr>
+  </table>
+  <br/>
 
-  <div class="field">
-    <%= f.label :ability %><br />
-    <%= f.text_field :ability %>
-  </div>
-  <div class="field">
-    <%= f.label :length_in_years %><br />
-    <%= f.text_field :length_in_years %>
-  </div>
-  <div class="field">
-    <%= f.label :comfort_level %> (out of 10)<br />
-    <%= f.text_field :comfort_level %>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save Skill" %>
   </div>
+  <br/>
 <% end %>
