--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Listing experiences</h1>
+<h1>Listing Skills</h1>
 
 <table>
   <tr>
-    <th>Experience/Ability</th>
-    <th>Years of Experience</th>
-    <th>Comfort Level</th>
-    <th></th>
+    <th>Skill</th>
+    <th>Years of experience</th>
+    <th>Level of experience (scale of 1-10)</th>
+    <!-- <th></th> -->
     <th></th>
     <th></th>
   </tr>
@@ -15,13 +15,13 @@
     <td><%= experience.ability %></td>
     <td><%= experience.length_in_years %></td>
     <td><%= experience.comfort_level %></td>
-    <td><%= link_to 'Show', experience %></td>
+    <!-- <td><%= link_to 'Show', experience %></td> -->
     <td><%= link_to 'Edit', edit_experience_path(experience) %></td>
-    <td><%= link_to 'Destroy', experience, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to 'Remove', experience, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Experience', new_experience_path %>
+<%= link_to 'Add a Skill', new_experience_path %>
