--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,8 @@
     <link rel="icon" href="/images/corporate_favicon.ico" type="image/ico" />
     <link rel="shortcut icon" href="/images/corporate_favicon.ico" type="image/ico" />
     <%= javascript_include_tag :defaults %>
-    <%= stylesheet_link_tag "main" %>
+	<%= javascript_include_tag 'jquery.ui.js', 'autocomplete-rails.js' %>
+    <%= stylesheet_link_tag "main", "ui-lightness/jquery-ui-1.8.11.custom.css" %>
 	<%= csrf_meta_tag %>
 </head>
 <body>
