--- a/app/views/skills/_form.html.erb
+++ b/app/views/skills/_form.html.erb
@@ -10,25 +10,21 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :title %><br />
+  <table>
+	<tr>
+	<td><%= f.label :title %></td>
     <!--<%= f.text_field :title %>
 	<%=text_field_tag 'title', '', :autocomplete => skills_autocomplete_skill_title_path %>	
 
 -->
-<%= f.autocomplete_field :title, skills_autocomplete_skill_title_path %>
-
-
-  </div>
-  <div class="field">
-    <%= f.label :length_in_years %><br />
-    <%= f.text_field :length_in_years %>
-  </div>
-  <div class="field">
-    <%= f.label :comfort_level %><br />
-    <%= f.text_field :comfort_level %>
-  </div>
+	<td><%= f.autocomplete_field :title, skills_autocomplete_skill_title_path %></td>
+  </tr><tr>
+    <td><%= f.label :length_in_years %></td>
+    <td><%= f.text_field :length_in_years %></td>
+  </tr><tr>
+    <td><%= f.label :comfort_level %></td>
+    <td><%= f.text_field :comfort_level %></td>
+  </tr></table>
   <div class="actions">
     <%= f.submit %>
   </div>
