--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,4 +1,6 @@
 <h1>Your Skill Set</h1>
+<p id="notice"><%= notice %></p>
+<p>Your skills are listed below. You can add skill now, or later by editing your profile.</p>
 
 <table>
   <tr>
