--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -2,11 +2,11 @@
 <table>
   <tr>
     <td align="center">
-      <img src="/images/mentee.png" alt="Mentee" height=33% width=33% />
+      <a href="<%=url_for new_mentee_path %>"><img src="/images/mentee.png" alt="Mentee" width=33% /></a>
     </td>
     <td></td>
     <td align="center">
-      <img src="/images/mentor.png" alt="Mentor" height=33% width=33% />
+      <a href="<%=url_for new_mentor_path %>"><img src="/images/mentor.png" alt="Mentor" width=33% /></a>
     </td>
   </tr>
   <tr>
